--- a/index.html
+++ b/index.html
@@ -1,39 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Intro section with dropdown navigation</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <script defer src="main.js"></script>
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav__dropdown">
+        <img src="images/logo.svg" alt="Snap Logo" />
+        <ul class="nav__list">
+          <li class="nav__item">
+            Features<img src="images/icon-arrow-down.svg" alt="Arrow Down" />
+          </li>
+          <li class="nav__item">
+            Company<img src="images/icon-arrow-down.svg" alt="Arrow down" />
+          </li>
+          <li class="nav__item">Careers</li>
+          <li class="nav__item">About</li>
+        </ul>
+      </div>
 
-  Features
-  Company
-  Careers
-  About
+      <div class="nav__login">
+        <button class="nav__btn nav__btn-login">Login</button>
+        <button class="nav__btn nav__btn-register">Register</button>
+      </div>
+    </nav>
+    <section class="section-hero hero">
+      <div class="container">
+        <div class="hero__info">
+          <h1 class="primary-heading">Make remote work</h1>
+          <p class="hero__description">
+            Get your team in sync, no matter your location. Streamline processes, create team
+            rituals, and watch productivity soar.
+          </p>
+          <button class="hero__btn">Learn more</button>
 
-  Login
-  Register
+          <div class="hero__featured">
+            <img src="images/client-databiz.svg" alt="DataBiz" />
+            <img src="images/client-audiophile.svg" alt="Audiophile" />
+            <img src="images/client-meet.svg" alt="Meet" />
+            <img src="images/client-maker.svg" alt="Maker" />
+          </div>
+        </div>
 
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <div class="hero__img">
+          <img src="images/image-hero-desktop.png" alt="Hero IMG" />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
