--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <script defer src="main.js"></script>
   </head>
@@ -22,8 +28,8 @@
           <li class="nav__item">
             Company<img src="images/icon-arrow-down.svg" alt="Arrow down" />
           </li>
-          <li class="nav__item">Careers</li>
-          <li class="nav__item">About</li>
+          <li class="nav__item"><a href="#" class="nav__link">Careers</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">About</a></li>
         </ul>
       </div>
 
