--- a/index.html
+++ b/index.html
@@ -22,12 +22,47 @@
       <div class="nav__dropdown">
         <img src="images/logo.svg" alt="Snap Logo" />
         <ul class="nav__list">
-          <li class="nav__item">
-            Features<img src="images/icon-arrow-down.svg" alt="Arrow Down" />
+          <li class="nav__item nav__item--1">
+            <a href="#" class="nav__link">Features</a>
+            <img src="images/icon-arrow-down.svg" alt="Arrow Down" />
+
+            <ul class="nav__dropdown__list nav__dropdown__list--1">
+              <li class="nav__dropdown__list-item">
+                <img src="images/icon-todo.svg" alt="Todo" />
+                <a href="#" class="nav__link">To do List</a>
+              </li>
+              <li class="nav__dropdown__list-item">
+                <img src="images/icon-calendar.svg" alt="Callendar" />
+                <a href="#" class="nav__link">Callendar</a>
+              </li>
+              <li class="nav__dropdown__list-item">
+                <img src="images/icon-reminders.svg" alt="Reminders" />
+                <a href="#" class="nav__link">Reminders</a>
+              </li>
+              <li class="nav__dropdown__list-item">
+                <img src="images/icon-planning.svg" alt="planning" />
+                <a href="#" class="nav__link">Planning</a>
+              </li>
+            </ul>
           </li>
-          <li class="nav__item">
-            Company<img src="images/icon-arrow-down.svg" alt="Arrow down" />
+
+          <li class="nav__item nav__item--2">
+            <a href="#" class="nav__link">Company</a>
+            <img src="images/icon-arrow-down.svg" alt="Arrow down" />
+
+            <ul class="nav__dropdown__list nav__dropdown__list--2">
+              <li class="nav__dropdown__list-item">
+                <a href="#" class="nav__link">History</a>
+              </li>
+              <li class="nav__dropdown__list-item">
+                <a href="#" class="nav__link">Our Team</a>
+              </li>
+              <li class="nav__dropdown__list-item">
+                <a href="#" class="nav__link">Blog</a>
+              </li>
+            </ul>
           </li>
+
           <li class="nav__item"><a href="#" class="nav__link">Careers</a></li>
           <li class="nav__item"><a href="#" class="nav__link">About</a></li>
         </ul>
